# -YOLO8-pjsk-

./: .gitattributes  .gitignore  README.md  gradle.properties  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/model_ncnn_model/: metadata.yaml  model.ncnn.param
app/src/main/assets/ui_button_ncnn_model/: model.ncnn.param
app/src/main/cpp/: CMakeLists.txt  native_detector.cpp
app/src/main/cpp/ncnn/: README.md
app/src/main/java/com/pjsk/autoplayer/: CaptureService.java  MainActivity.java
app/src/main/java/com/pjsk/autoplayer/core/: AutoContinueController.java  AutoPlayer.java  Config.java  Detection.java  GameEndPauseController.java  LaneTracker.java  NoteTrack.java
app/src/main/java/com/pjsk/autoplayer/input/: RootEventInjector.java  TouchInjector.java  TouchPoint.java
app/src/main/java/com/pjsk/autoplayer/ncnn/: NcnnDetector.java  UiButtonDetector.java
app/src/main/java/com/pjsk/autoplayer/overlay/: DetectionPreviewOverlay.java  StatusOverlay.java
app/src/main/java/com/pjsk/autoplayer/screen/: ScreenCaptureSource.java
app/src/main/java/com/pjsk/autoplayer/settings/: AppSettings.java  DebugDisplayController.java
tools/: prepare_ui_button_dataset.py
tools/adb/: README.md  run-adb-flow.ps1  steps.example.json
